--- a/src/app.css
+++ b/src/app.css
@@ -5,21 +5,8 @@
   text-align: center;
 } */
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.preact:hover {
-  filter: drop-shadow(0 0 2em #673ab8aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.join {
+  position: absolute;
+  z-index: -1;
+  opacity: 0.3;
 }
